--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Estilos gerais */
 body {
+    background-color: blue;
     background-image: url("brook-one-piece-378.jpg");
     background-size: cover;
     background-position: auto;
